...
                <Image
                    source={require("../../../assets/images/logo.png")}
                    style={styles.logo}
                    resizeMode="contain"
                />

                <View testID="home" style={styles.textContainer}>
                    <Text style={styles.text}>
                        Primeira vez aqui?{" "}
                        <Text style={styles.bold} onPress={() => router.push({ pathname: "/SignupUser" })}>
                            Cadastre-se
                        </Text>
                    </Text>
...
                            aqui!
                        </Text>
                    </Text>

                    <Text style={styles.text}>
                        Já possui uma conta?{" "}
                        <Text testID="entrar" style={styles.bold} onPress={() => router.push({ pathname: "/Login" })}>
                            Entrar
                        </Text>
                    </Text>
                </View>
            </View>
        </LinearGradient>
...
